TestSuite/errors/err0300.pas
{$mainresource '0.res'}
{$mainresource '1.res'}

begin end.